Fixed weird spacing of events on home page.

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,12 +3,12 @@
 .cycle-slideshow { width: 70%; display: table-cell; }
 .cycle-slideshow img { width: 100%; height: calc }
 
-  .cycle-overlay { 
+  .cycle-overlay {
     font-family: tahoma, arial;
     position: relative; bottom: 0; width: 100%; z-index: 600;
     background: black; color: white; opacity: .75;
     padding-bottom: 15px;
-    padding-top: 15px;  
+    padding-top: 15px;
 }
 
 .cycle-overlay div{
@@ -21,7 +21,7 @@
   display: table;
   width: 100%;
     table-layout: fixed;
-    border-spacing: 10px; 
+    border-spacing: 10px;
 	padding-top: 30px;
 }
 .Row
@@ -36,7 +36,7 @@
 
 .heading_text {
   font-size: 1.3em;
-  font-weight: bold; 
+  font-weight: bold;
 }
 
 .dates {
@@ -48,21 +48,17 @@ margin-right: 50px;
   height: 750px;
   width: 200;
   font-size: 1em;
-   
+
 }
 
 .news-table-wrapper, .dates-table-wrapper {
-  /*display: table-cell;*/
   width: 100%;
-  height: 100%;
   font-size: 1em;
 }
 
 .news-table, .dates-table {
   display: table;
-  /*border-color: #333;*/
   width: 100%;
-  height: 100%;
   margin: 5px;
   font-size: 1em;
 }
@@ -89,9 +85,9 @@ margin-right: 50px;
     width: 95%;
   }
   .news, .dates {
-  height: auto; 
-  width: 100%; 
-  display: block; 
+  height: auto;
+  width: 100%;
+  display: block;
   margin-left: 0px;
   margin-right: 0px;
   }
@@ -102,7 +98,7 @@ margin-right: 50px;
 
 
 @media only screen and (max-width: 480px){
-    
+
 .cycle-overlay {display: none;}
   .cycle-slideshow { display: none;}
     .Row {
@@ -112,20 +108,19 @@ margin-right: 50px;
     width: 95%;
   }
   .news, .dates {
-  height: auto; 
-  width: 100%; 
-  display: block; 
+  height: auto;
+  width: 100%;
+  display: block;
   margin-left: 0px;
   margin-right: 0px;
   }
   }
-  
+
   .news_date {
-  
+
   margin-top: 4px;
   }
 
   .story {
   font-size: 0.8em;
   }
-  
